--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
         <div class="container footer">
           <ul>
             <li><a href="http://blog.sieveable.io">Blog</a></li>
-            <li><a href="docs">Docs</a></li>
-            <li><a href="about">About</a></li>
-            <li><a href="privacy">Privacy</a></li>
-            <li><a href="contact">Contact</a></li>
+            <li><a href="sieveable.io/docs">Docs</a></li>
+            <li><a href="sieveable.io/about">About</a></li>
+            <li><a href="sieveable.io/privacy">Privacy</a></li>
+            <li><a href="sieveable.io/contact">Contact</a></li>
           </ul>
           <p>© 2015 Sikuli Lab.</p>
         </div>
