fix relative link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse">
           <ul class="nav navbar-nav nav-push pull-right">
             <li><a href="http://blog.sieveable.io" class="nav-push-item nav-link">Blog</a></li>
-            <li><a href="/docs" class="nav-push-item nav-link">Documentation</a></li>
+            <li><a href="sieveable.io/docs" class="nav-push-item nav-link">Documentation</a></li>
             <li><a href="https://github.com/sikuli/sieveable" class="nav-push-item nav-link">GitHub</a></li>
           </ul>
         </div>
