--- a/privacy/index.html
+++ b/privacy/index.html
@@ -33,7 +33,7 @@
         <div class="col-md-8">
           <div class="section">
             <h1>Sieveable | Privacy</h1>
-            <section class="content"><p>We take the privacy of your app very seriously, and are committed to protecting it. If you want your app to be removed from our search engine, please contact us directly at <img src="/images/khalid_em.png" alt="Khalid Alharbi at Colorado dor edu"></p>
+            <section class="content"><p>We take the privacy of your app very seriously, and are committed to protecting it. If you want your app to be removed from our search engine, please contact us directly at <img src="/sieveable.io/images/khalid_em.png" alt="Khalid Alharbi at Colorado dor edu"></p>
 </section>
           </div>
         </div>
