--- a/privacy/index.html
+++ b/privacy/index.html
@@ -21,11 +21,11 @@
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
-    <nav class="page-header-nav"><a type="button" href="/sieveable.io" class="btn btn-default btn-lg page-header-link"><span aria-hidden="true" class="glyphicon glyphicon-home"></span></a></nav>
+    <nav class="page-header-nav"><a type="button" href="/" class="btn btn-default btn-lg page-header-link"><span aria-hidden="true" class="glyphicon glyphicon-home"></span></a></nav>
     <div class="container">
       <div class="row">
         <div class="col-md-2"></div>
-        <div class="col-md-8 main-header text-center"><img src="/sieveable.io/images/sieveable.png" alt="Sieveable" class="center-block img-responsive"></div>
+        <div class="col-md-8 main-header text-center"><img src="/images/sieveable.png" alt="Sieveable" class="center-block img-responsive"></div>
         <div class="col-md-2"></div>
       </div>
       <div class="row">
@@ -33,7 +33,7 @@
         <div class="col-md-8">
           <div class="section">
             <h1>Sieveable | Privacy</h1>
-            <section class="content"><p>We take the privacy of your app very seriously, and are committed to protecting it. If you want your app to be removed from our search engine, please contact us directly at <img src="/sieveable.io/images/khalid_em.png" alt="Khalid Alharbi at Colorado dor edu"></p>
+            <section class="content"><p>We take the privacy of your app very seriously, and are committed to protecting it. If you want your app to be removed from our search engine, please contact us directly at <img src="/images/khalid_em.png" alt="Khalid Alharbi at Colorado dor edu"></p>
 </section>
           </div>
         </div>
