--- a/about/index.html
+++ b/about/index.html
@@ -21,11 +21,11 @@
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
-    <nav class="page-header-nav"><a type="button" href="/sieveable.io" class="btn btn-default btn-lg page-header-link"><span aria-hidden="true" class="glyphicon glyphicon-home"></span></a></nav>
+    <nav class="page-header-nav"><a type="button" href="/" class="btn btn-default btn-lg page-header-link"><span aria-hidden="true" class="glyphicon glyphicon-home"></span></a></nav>
     <div class="container">
       <div class="row">
         <div class="col-md-2"></div>
-        <div class="col-md-8 main-header text-center"><img src="/sieveable.io/images/sieveable.png" alt="Sieveable" class="center-block img-responsive"></div>
+        <div class="col-md-8 main-header text-center"><img src="/images/sieveable.png" alt="Sieveable" class="center-block img-responsive"></div>
         <div class="col-md-2"></div>
       </div>
       <div class="row">
