--- a/contact/index.html
+++ b/contact/index.html
@@ -17,15 +17,15 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Great+Vibes" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="sieveable.io/css/bootstrap-social.css">
-    <link rel="stylesheet" href="sieveable.io/css/style.css">
+    <link rel="stylesheet" href="/css/bootstrap-social.css">
+    <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
-    <nav class="page-header-nav"><a type="button" href="/sieveable.io" class="btn btn-default btn-lg page-header-link"><span aria-hidden="true" class="glyphicon glyphicon-home"></span></a></nav>
+    <nav class="page-header-nav"><a type="button" href="/" class="btn btn-default btn-lg page-header-link"><span aria-hidden="true" class="glyphicon glyphicon-home"></span></a></nav>
     <div class="container">
       <div class="row">
         <div class="col-md-2"></div>
-        <div class="col-md-8 main-header text-center"><img src="/sieveable.io/images/sieveable.png" alt="Sieveable" class="center-block img-responsive"></div>
+        <div class="col-md-8 main-header text-center"><img src="/images/sieveable.png" alt="Sieveable" class="center-block img-responsive"></div>
         <div class="col-md-2"></div>
       </div>
       <div class="row">
@@ -34,7 +34,7 @@
           <div class="section">
             <h1>Sieveable | Contact</h1>
             <section class="content"><p>If you have any questions about Sieveable or want to report an issue, you can do so on our <a href="https://github.com/sikuli/sieveable/issues">issues&nbsp;page</a>.</p>
-<p>You may also contact us directly at: <img src="/sieveable.io/images/khalid_em.png" alt="Khalid Alharbi at Colorado dor edu">.</p>
+<p>You may also contact us directly at: <img src="/images/khalid_em.png" alt="Khalid Alharbi at Colorado dor edu">.</p>
 </section>
           </div>
         </div>
