--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Great+Vibes" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-social.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/bootstrap-social.css">
+    <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
     <nav class="navbar">
@@ -29,7 +29,7 @@
         <div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse">
           <ul class="nav navbar-nav nav-push pull-right">
             <li><a href="http://blog.sieveable.io" class="nav-push-item nav-link">Blog</a></li>
-            <li><a href="docs" class="nav-push-item nav-link">Documentation</a></li>
+            <li><a href="/docs" class="nav-push-item nav-link">Documentation</a></li>
             <li><a href="https://github.com/sikuli/sieveable" class="nav-push-item nav-link">GitHub</a></li>
           </ul>
         </div>
@@ -38,7 +38,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-2"></div>
-        <div class="col-md-7 main-header text-center"><img src="images/sieveable.png" alt="Sieveable">
+        <div class="col-md-7 main-header text-center"><img src="/images/sieveable.png" alt="Sieveable">
           <h1>Sieveable is the free, open source, and deep search engine for Android apps.</h1>
           <div class="main-header-buttons">
             <ul class="list-inline">
@@ -49,7 +49,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 intro-hedaer"><img src="/sieveable.io/images/sieveable-browser.png" alt="Sieveable Browser" class="center-block img-responsive"></div>
+        <div class="col-md-12 intro-hedaer"><img src="/images/sieveable-browser.png" alt="Sieveable Browser" class="center-block img-responsive"></div>
       </div>
       <div class="row">
         <!-- List all features-->
@@ -60,7 +60,7 @@
               <h2 class="features-heading">Deep Search</h2>
               <p class="lead">Sieveable enables you to deeply search inside Android apps. You can search for apps by listing details (e.g., download count, star rating, description, etc.), user interface (e.g., layout components or hierarchy), Manifest (e.g., declared permissions), and API calls (e.g., use of a particular third party library).</p>
             </div>
-            <div class="col-md-5"><img src="/sieveable.io/images/sieveable-browser-deep.jpg" alt="Sieveable deep search" class="features-image img-responsive center-block"></div>
+            <div class="col-md-5"><img src="/images/sieveable-browser-deep.jpg" alt="Sieveable deep search" class="features-image img-responsive center-block"></div>
           </div>
           <hr class="features-divider">
           <div class="row features odd-card">
@@ -68,7 +68,7 @@
               <h2 class="features-heading">Query by Example</h2>
               <p class="lead">Sieveable's search queries are examples of Android apps. You do not need to learn a new query language to search inside apps. Sieveable features a declarative query language that uses the same syntax used in Android apps.</p>
             </div>
-            <div class="col-md-5 col-md-pull-7"><img src="/sieveable.io/images/sieveable-browser-query-by-example.jpg" alt="Sieveable query by example" class="features-image img-responsive center-block"></div>
+            <div class="col-md-5 col-md-pull-7"><img src="/images/sieveable-browser-query-by-example.jpg" alt="Sieveable query by example" class="features-image img-responsive center-block"></div>
           </div>
           <hr class="features-divider">
           <div class="row features even-card">
@@ -76,7 +76,7 @@
               <h2 class="features-heading">Free and Open</h2>
               <p class="lead">Sieveable is free and fully open source. You can read the source code or change it however you want. We made it open because we strongly believe that open source creates better software and great community.</p>
             </div>
-            <div class="col-md-5"><img src="/sieveable.io/images/sieveable-open-source.jpg" alt="Sieveable is free and open source" class="features-image img-responsive center-block"></div>
+            <div class="col-md-5"><img src="/images/sieveable-open-source.jpg" alt="Sieveable is free and open source" class="features-image img-responsive center-block"></div>
           </div>
         </div>
       </div>
@@ -84,10 +84,10 @@
         <div class="container footer">
           <ul>
             <li><a href="http://blog.sieveable.io">Blog</a></li>
-            <li><a href="/sieveable.io/docs">Docs</a></li>
-            <li><a href="/sieveable.io/about">About</a></li>
-            <li><a href="/sieveable.io/privacy">Privacy</a></li>
-            <li><a href="/sieveable.io/contact">Contact</a></li>
+            <li><a href="/docs">Docs</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/privacy">Privacy</a></li>
+            <li><a href="/contact">Contact</a></li>
           </ul>
           <p>© 2015 Sikuli Lab.</p>
         </div>
