add browser link

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <h1>Sieveable is the free, open source, and deep search engine for Android apps.</h1>
           <div class="main-header-buttons">
             <ul class="list-inline">
-              <li><a href="#" class="btn btn-lg intro-button"><span> COMING SOON</span></a></li>
+              <li><a href="http://browser.sieveable.io" class="btn btn-lg intro-button"><span>Start Searching</span></a></li>
             </ul>
           </div>
           <div class="col-md-3"></div>
