--- a/about/index.html
+++ b/about/index.html
@@ -34,8 +34,7 @@
         <div class="col-md-8">
           <div class="section">
             <h1>Sieveable | About</h1>
-            <section class="content"><p>Sieveable is <a href="http://kalharbi.com">Khalid Alarbi</a>, <a href="http://tomyeh.info">Tom Yeh</a>, and <a href="http://chenjackson.com">Jackson&nbsp;Chen</a></p>
-<p>We started a research effort at the Sikuli lab of the University of Colorado Boulder to make searching and finding apps faster and&nbsp;easier.</p>
+            <section class="content"><p>Sieveable started as a research effort at the Sikuli lab of the University of Colorado Boulder to make mining Android apps faster and&nbsp;easier.</p>
 </section>
           </div>
         </div>
